--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A web page to make your images black and white",
   "main": "src/index.js",
   "scripts": {
+    "lint": "eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
